# IMU_Sensor

./: README.md
Hardware/: 1_PowerSupply.SchDoc  2_MCU.SchDoc  3_IMU_ETH.SchDoc  4_SD_Card.SchDoc  README.md  XsensCustomDevKit.PrjPcb  XsensCustomDevKit.PrjPcbStructure
Hardware/3D_models/: 1x2_Header.SLDPRT  CircuitWorks-CAPACITOR 1206.SLDPRT  CircuitWorks-RESISTOR 1206.SLDPRT  Coilcraft-1206USB.SLDPRT  PLCC-28SMD.SLDPRT  User Library-0ZCH0005FF2E.SLDPRT  User Library-0ZCJ0035FF2G-1.SLDPRT  User Library-1x2 TH Pitch 2_54mm.SLDPRT  User Library-2 Way PCB Screw Terminal Block 5_08mm.SLDPRT  User Library-CDRH4D28.SLDPRT  User Library-Crystal HC49_US-SM.SLDPRT  User Library-Header_Fem_1X6.SLDPRT  User Library-LQFP100_05.SLDPRT  User Library-LQFP48-3.SLDPRT  User Library-Pin header 1x8 pinos reto pitch 2_54.SLDPRT  User Library-SMAJ.SLDPRT  User Library-SMD 8x10.SLDPRT  WIZ820IO--3DModel-STEP-56544.STEP
Hardware/Libraries/: GraphicalLib.SchLib  SymbolLib.SchLib
Software/Firmware/: CMakeLists.txt  README.md  STM32L433VCTX_FLASH.ld
Software/Firmware/Application/Inc/: main.h  rtc_app.h  tasks_app.h  w5200_app.h  xsens_app.h
Software/Firmware/Application/Src/: main.c  rtc_app.c  tasks_app.c  w5200_app.c  xsens_app.c
Software/Firmware/Drivers/Ethernet/Cfg/: w5200_config.c  w5200_config.h  wizchip_conf.h
Software/Firmware/Drivers/Ethernet/Src/: socket.c
Software/Firmware/Drivers/Xsens/Cfg/: xsens_config.h
Software/Firmware/Drivers/Xsens/Src/: xsens_com.c  xsens_com.h  xsens_miscellaneous.c  xsens_miscellaneous.h
Software/Firmware/Libraries/FreeRTOS/Cfg/: FreeRTOSConfig.h
Software/Firmware/Libraries/STM32L4xx_HAL_Driver/Cfg/Inc/: stm32l4xx_hal_conf.h  stm32l4xx_it.h
Software/Firmware/Libraries/STM32L4xx_HAL_Driver/Cfg/Src/: gpio.c  rtc.c  spi.c  stm32l4xx_it.c  tim.c
Software/Python_communication_tool/: README.md  main.py  xsens.py  xsens_types.py
